[tool.poetry]
name = "space_adventure"
version = "0.1.0"
description = "Strategy game"
authors = ["Serhii Buniak <master.sergius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
